--- a/src/main/resources/labels_pt_BR.properties
+++ b/src/main/resources/labels_pt_BR.properties
@@ -1,7 +1,12 @@
 welcome=Bem Vindo(a)
+new=Novo\n
+id=ID
+of=de
+datatable.empty=Nenhum registro encontrado.
 app.title=App Exemplo
-menu.crud=CRUD
+menu.pearson=Pessoa
 search.filters=Filtros
+create.edit=Edi\u00E7\u00E3o
 clear=Limpar
 search=Pesquisar
 name=Nome
