--- a/src/main/resources/labels_pt_BR.properties
+++ b/src/main/resources/labels_pt_BR.properties
@@ -1,9 +1,16 @@
 welcome=Bem Vindo(a)
+delete=Deletar
+delete.question=Deseja realmente deletar?
+yes=Sim
+no=N\u00E3o
+cancel=Cancelar
+save=Salvar
+required=Obrigat\u00F3rio
 new=Novo\n
 id=ID
 of=de
 datatable.empty=Nenhum registro encontrado.
-app.title=App Exemplo
+app.title=CV
 menu.pearson=Pessoa
 search.filters=Filtros
 create.edit=Edi\u00E7\u00E3o
